# seeker-robot

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.init-bootstrap  README.md  check_state.py  docker-compose.yml
.github/workflows/: clang-format.yml  commitlint.yml  pages.yml  wiki-sync.yml
client/: client.py  transcribe.py  translate.py
doc/pcb/sesamepcb/: fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  motors.kicad_sch  sesamepcb.kicad_pcb  sesamepcb.kicad_prl  sesamepcb.kicad_pro  sesamepcb.kicad_sch  sym-lib-table
doc/pictures/: pcb_led.mov
docker/: .env.example  Dockerfile  Dockerfile.init-bootstrap  docker-compose.yml  init_bootstrap.sh  install-sim-tools.sh
docs/wiki/: Architecture.md  Contributing.md  Home.md  IRL-Tests.md  MCU-Firmware.md  MCU-Sketches.md  ROS2-Packages.md  Setup.md  Simulation.md  _config.yml  index.md
mcu_ws/: README.md  platformio.ini
mcu_ws/extra_packages/: README.md
mcu_ws/lib/: README.md
mcu_ws/lib/BatterySubsystem/: BatterySubsystem.cpp  BatterySubsystem.h
mcu_ws/lib/BleDebugSubsystem/: BleDebugSubsystem.cpp  BleDebugSubsystem.h
mcu_ws/lib/CamMicSubsystem/: CamMicSubsystem.cpp  CamMicSubsystem.h
mcu_ws/lib/CameraSubsystem/: CameraSubsystem.cpp  CameraSubsystem.h  camera_pins.h
mcu_ws/lib/CustomDebug/: CustomDebug.cpp  CustomDebug.h
mcu_ws/lib/ESP32WifiSubsystem/: ESP32WifiSubsystem.cpp  ESP32WifiSubsystem.h
mcu_ws/lib/GaitController/: GaitController.cpp  GaitController.h  GaitRosParticipant.cpp  GaitRosParticipant.h
mcu_ws/lib/GyroSubsystem/: GyroSubsystem.cpp  GyroSubsystem.h
mcu_ws/lib/HeartbeatParticipant/: HeartbeatParticipant.cpp  HeartbeatParticipant.h
mcu_ws/lib/HexapodKinematics/: HexapodKinematics.cpp  HexapodKinematics.h  HexapodLeg.cpp  HexapodLeg.h
mcu_ws/lib/LedSubsystem/: LedSubsystem.cpp  LedSubsystem.h  StatusLedController.h
mcu_ws/lib/LidarSubsystem/: LidarSubsystem.cpp  LidarSubsystem.h
mcu_ws/lib/MicSubsystem/: MicSubsystem.cpp  MicSubsystem.h
mcu_ws/lib/MicroRosBridge/: MicroRosBridge.cpp  MicroRosBridge.h  MicroRosDebug.h
mcu_ws/lib/MicroRosDebug/: MicroRosDebug.cpp  MicroRosDebug.h
mcu_ws/lib/Microros/: microros_manager_robot.cpp  microros_manager_robot.h  microros_setup.cpp
mcu_ws/lib/OledSubsystem/: OledFrames.h  OledSubsystem.cpp  OledSubsystem.h
mcu_ws/lib/PCA9685/: PCA9685.cpp  PCA9685.h
mcu_ws/lib/RobotConfig/: HexapodConfig.h  RobotConfig.h
mcu_ws/lib/RobotPersistence/: RobotPersistence.cpp  RobotPersistence.h
mcu_ws/lib/ServoSubsystem/: ServoSubsystem.cpp  ServoSubsystem.h
mcu_ws/libs_external/: README.md
mcu_ws/platformio/: network_config.example.ini  platformio.ini  strip_pioarduino_flags.py
mcu_ws/test/: README.md
ros2_ws/: .clang-format  COMMANDS.md  README.md
ros2_ws/src/seeker_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/seeker_navigation/config/: ekf_params.yaml  nav2_params.yaml  nav2_params_real.yaml  scripted_cmd_vel_example.yaml  slam_toolbox_params_real.yaml
ros2_ws/src/seeker_navigation/launch/: ball_search.launch.py  nav2_ball_search.launch.py  real_ball_search.launch.py  real_object_seek.launch.py  real_object_seek_no_gyro.launch.py  real_object_seek_thorough.launch.py  real_scripted_drive.launch.py  real_slam_ekf.launch.py  real_slam_raw.launch.py
ros2_ws/src/seeker_navigation/rviz/: nav2.rviz  slam.rviz
ros2_ws/src/seeker_navigation/seeker_navigation/: ball_searcher.py  cmd_vel_restrict.py  dead_reckoning_odom.py  find.py  object_seeker.py  scan_inflate_node.py  scan_tilt_filter.py  scripted_cmd_vel.py  search_voice.py  visual_coverage_node.py
ros2_ws/src/seeker_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/seeker_sim/seeker_sim/: fake_mcu_node.py
ros2_ws/src/seeker_tts/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/seeker_tts/launch/: tts.launch.py
ros2_ws/src/seeker_tts/seeker_tts/: tts_node.py
ros2_ws/src/seeker_tts/tools/: generate_sounds.py  listen_audio.sh
ros2_ws/src/seeker_voice/: README_AI_TESTING.md  package.xml  setup.cfg  setup.py
ros2_ws/src/seeker_voice/launch/: esp32_mic.launch.py  local_mic.launch.py
ros2_ws/src/seeker_voice/seeker_voice/: command_node.py  seeker_mcu.code-workspace  transcription_node.py
ros2_ws/src/seeker_web/: package.xml  setup.cfg  setup.py
ros2_ws/src/seeker_web/launch/: web.launch.py
ros2_ws/src/seeker_web/seeker_web/: web_node.py
ros2_ws/src/seeker_web/seeker_web/static/: app.js  index.html  style.css
scripts/: imu_check.py  init_bootstrap.sh  oled_sine.py  register_cuda_libs.py  voice_terminal.py
(+162 files in other folders)
