<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seeker_tts</name>
  <version>1.0.0</version>
  <description>Text-to-speech bridge: subscribes to transcription text, calls Fish Audio TTS, streams PCM to the ESP32 speaker</description>
  <maintainer email="todo@todo.com">seeker</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
