<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seeker_voice</name>
  <version>1.0.0</version>
  <description>Voice command pipeline: ESP32/local mic → Whisper transcription → Gemini intent classification → TTS</description>
  <maintainer email="todo@todo.com">seeker</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mcu_msgs</exec_depend>

  <!--
    Runtime Python deps installed via pip in docker/Dockerfile (no rosdep keys):
      - google-genai     (Gemini intent classification)
      - faster-whisper   (on-device STT)
      - sounddevice      (local mic capture)
      - pydantic         (pulled in transitively by google-genai)
  -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
