<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seeker_web</name>
  <version>1.0.0</version>
  <description>All-in-one browser controller: serves an HTML dashboard that subs/pubs Seeker MCU topics over WebSocket and proxies the ESP32 camera / mic streams</description>
  <maintainer email="todo@todo.com">seeker</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-aiohttp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
